; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/src/extr_buttons.c_BUTTONS_Read.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/src/extr_buttons.c_BUTTONS_Read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@configured = common dso_local global i32 0, align 4
@pin_buttons = common dso_local global %struct.TYPE_2__* null, align 8
@BUTTONS_POLARITY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @BUTTONS_Read(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32, i32* @configured, align 4
  %5 = icmp eq i32 %4, 1
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pin_buttons, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pin_buttons, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @GPIO_ReadInputDataBit(i32 %12, i32 %17)
  %19 = load i64, i64* @BUTTONS_POLARITY, align 8
  %20 = load i64, i64* %3, align 8
  %21 = lshr i64 %19, %20
  %22 = and i64 %21, 1
  %23 = icmp eq i64 %18, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %1
  store i64 1, i64* %2, align 8
  br label %26

25:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %26

26:                                               ; preds = %25, %24
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @GPIO_ReadInputDataBit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
